--- a/_data/bio.yml
+++ b/_data/bio.yml
@@ -7,4 +7,9 @@ resume:     "/assets/resume/CV_ZhiwenShao-2.pdf"
 normal:
   date:     "June 2018"
   title:    ""
-  content:  "<strong>Zhiwen Shao</strong> is a Computer Science Ph.D. candidate in the Department of Computer Science and Engineering, <strong>Shanghai Jiao Tong University (SJTU)</strong>, advised by <a href='http://www.cs.sjtu.edu.cn/en/PeopleDetail.aspx?id=154'>Prof. Lizhuang Ma</a>. He earned his Bachelor’s degrees in Computer Science and Technology from Northwestern Polytechnical University, China. His research interests lie in the field of <strong>Face Analysis</strong> and <strong>Deep Learning</strong>."
+  content:  "<strong>Zhiwen Shao</strong> is now a Computer Science Ph.D. candidate in the Department of Computer Science and Engineering, <strong>Shanghai Jiao Tong University (SJTU)</strong>, China, advised by <a href='http://www.cs.sjtu.edu.cn/en/PeopleDetail.aspx?id=154'>Prof. Lizhuang Ma</a>. He received the B.Eng. degree in Computer Science and Technology from Northwestern Polytechnical University, China. His research interests lie in the field of <strong>Face Analysis</strong> and <strong>Deep Learning</strong>."
+short:
+  date:
+  title:  ""
+  content: "I mainly focus on <strong>Face Alignment</strong> and <strong>Facial Expression Recognition</strong>."
+
