--- a/_data/bio.yml
+++ b/_data/bio.yml
@@ -1,4 +1,4 @@
-name:       "Zhiwen Shao"
+name:       "Zhiwen Shao (邵志文)"
 title:      "Ph.D. Candidate [at] SJTU"
 email:      "shaozhiwen[at]sjtu.edu.cn"
 head_pic:   "/images/self-portrait/zhiwen.png"
@@ -10,6 +10,6 @@ normal:
   content:  "<strong>Zhiwen Shao</strong> is now a Computer Science Ph.D. candidate in the Department of Computer Science and Engineering, <strong>Shanghai Jiao Tong University (SJTU)</strong>, China, advised by <a href='http://www.cs.sjtu.edu.cn/en/PeopleDetail.aspx?id=154'>Prof. Lizhuang Ma</a>. He received the B.Eng. degree in Computer Science and Technology from Northwestern Polytechnical University, China. His research interests lie in the field of <strong>Face Analysis</strong> and <strong>Deep Learning</strong>."
 short:
   date:
-  title:  ""
-  content: "I mainly focus on <strong>Face Alignment</strong> and <strong>Facial Expression Recognition</strong>."
+  title:  "Learn from You"
+  content: "I mainly focus on <strong>Face Alignment</strong> and <strong>Facial Expression Recognition</strong>. I am honored to discuss with researchers related to these fields."
 
