--- a/_data/bio.yml
+++ b/_data/bio.yml
@@ -1,6 +1,6 @@
 name:       "Zhiwen Shao (邵志文)"
 title:      "Ph.D. Candidate [at] SJTU"
-email:      "shaozhiwen at sjtu.edu.cn"
+email:      "shaozhiwen[at]sjtu.edu.cn"
 head_pic:   "/images/self-portrait/zhiwen.png"
 deep_pic:   "/images/self-portrait/zhiwen.png"
 resume:     "/assets/resume/CV_ZhiwenShao-final.pdf"
