--- a/_data/bio.yml
+++ b/_data/bio.yml
@@ -7,8 +7,8 @@ resume:     "/assets/resume/CV_ZhiwenShao-final.pdf"
 normal:
   date:     "June 2018"
   title:    ""
-  content:  "I am now a Computer Science Ph.D. candidate in the <a href='http://dmcv.sjtu.edu.cn/'>Digital Media & Computer Vision Laboratory</a>, Department of Computer Science and Engineering, <strong>Shanghai Jiao Tong University (SJTU)</strong>, China. I received the B.Eng. degree in Computer Science and Technology from <strong>Northwestern Polytechnical University (NPU)</strong>, China. My advisor is <a href='http://dmcv.sjtu.edu.cn/people'>Prof. Lizhuang Ma</a>, and my research interests lie in the fields of <strong>Face Analysis</strong> and <strong>Deep Learning</strong>."
+  content:  "I will be a Tenure-Track Associate Professor at the School of Computer Science and Technology, <strong>China University of Mining and Technology (CUMT)</strong>, China soon. I received the Ph.D. degree in Computer Science and Technology from the <strong>Shanghai Jiao Tong University (SJTU)</strong>, China, advised by <a href='http://dmcv.sjtu.edu.cn/people'>Prof. Lizhuang Ma</a>. From 2017 to 2018, I was a joint Ph.D. student at the Multimedia and Interactive Computing Lab, Nanyang Technological University, Singapore, advised by <a href='https://research.monash.edu/en/persons/jianfei-cai'>Prof. Jianfei Cai</a>. Before that, I received the B.Eng. degree in Computer Science and Technology from the <strong>Northwestern Polytechnical University (NPU)</strong>, China. My research interests lie in the fields of <strong>Image Analysis</strong> and <strong>Deep Learning</strong>."
 short:
   date:
   title:  "Learn from You"
-  content: "I mainly focus on <strong>Face Alignment</strong> and <strong>Facial Expression Recognition</strong>. I am honored to discuss with researchers related to these fields."
+  content: "I mainly focus on <strong>Facial Expression Recognition</strong>, <strong>Facial Expression Manipulation</strong>, and <strong>Face Alignment</strong>. I am honored to discuss with researchers related to these fields."
