--- a/_data/bio.yml
+++ b/_data/bio.yml
@@ -1,5 +1,5 @@
 name:       "Zhiwen Shao (邵志文)"
-title:      "Tenure-Track Associate Professor [at] CUMT"
+title:      "Associate Professor [at] CUMT"
 email:      "shaozhiwen AT sjtu.edu.cn"
 head_pic:   "/images/self-portrait/zhiwen.png"
 deep_pic:   "/images/self-portrait/zhiwen.png"
