--- a/_data/bio.yml
+++ b/_data/bio.yml
@@ -5,9 +5,9 @@ head_pic:   "/images/self-portrait/zhiwen.png"
 deep_pic:   "/images/self-portrait/zhiwen.png"
 resume:     "/assets/resume/CV_ZhiwenShao-final.pdf"
 normal:
-  date:     "June 2018"
+  date:     "Sept. 2020"
   title:    ""
-  content:  "I am now a Tenure-Track Associate Professor at the School of Computer Science and Technology, <strong>China University of Mining and Technology (CUMT)</strong>. I received the Ph.D. degree in Computer Science and Technology from the <strong>Shanghai Jiao Tong University (SJTU)</strong>, advised by <a href='http://dmcv.sjtu.edu.cn/people'>Prof. Lizhuang Ma</a>. From 2017 to 2018, I was a joint Ph.D. student at the Multimedia and Interactive Computing Lab, <strong>Nanyang Technological University (NTU)</strong>, advised by <a href='https://research.monash.edu/en/persons/jianfei-cai'>Prof. Jianfei Cai</a>. Before that, I received the B.Eng. degree in Computer Science and Technology from the <strong>Northwestern Polytechnical University (NPU)</strong>. My research interests lie in the fields of <strong>Image Analysis</strong> and <strong>Deep Learning</strong>."
+  content:  "I am now a Tenure-Track Associate Professor at the School of Computer Science and Technology, <strong>China University of Mining and Technology (CUMT)</strong>. I received the Ph.D. degree in Computer Science and Technology from the <strong>Shanghai Jiao Tong University (SJTU)</strong>, advised by <a href='http://dmcv.sjtu.edu.cn/people'>Prof. Lizhuang Ma</a>. From 2017 to 2018, I was a joint Ph.D. student at the Multimedia and Interactive Computing Lab, <strong>Nanyang Technological University (NTU)</strong>, advised by <a href='https://research.monash.edu/en/persons/jianfei-cai'>Prof. Jianfei Cai</a>. Before that, I received the B.Eng. degree in Computer Science and Technology from the <strong>Northwestern Polytechnical University (NPU)</strong>. My research interests lie in the fields of <strong>Computer Vision</strong> and <strong>Deep Learning</strong>."
 short:
   date:
   title:  "Learn from You"
