--- a/_data/bio.yml
+++ b/_data/bio.yml
@@ -11,4 +11,4 @@ normal:
 short:
   date:
   title:  "Learn from You"
-  content: "My research interests lie in the fields of <strong>Computer Vision</strong> and <strong>Deep Learning/<strong>. I am honored to discuss with researchers related to these fields."
+  content: "My research interests lie in the fields of <strong>Computer Vision</strong> and <strong>Deep Learning</strong>. I am honored to discuss with researchers related to these fields."
